--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 :root{
     --cor-de-fundo: #EBECEE;
     --branco: #FFFFFF;
+    --laranja: #EB9B00;
+    --azul-degrade:linear-gradient(97.54deg, #002f52 35.49%, #3265B9 165.37%);
 }
 
 
