--- a/style/header.css
+++ b/style/header.css
@@ -14,6 +14,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
 }
 
 
@@ -27,4 +28,23 @@
 
 .container__imagem{
 padding: 1em;
+}
+
+
+.lista-menu{
+    display: none;
+    position: absolute;
+    top: 100%;
+
+}
+
+
+.container__botao:checked ~ .lista-menu{
+    display: block;
+}
+
+
+.lista-menu__titulo, .lista-menu__item{
+    background-color: var(--branco);
+    padding: 1em;
 }
