--- a/style/header.css
+++ b/style/header.css
@@ -48,3 +48,24 @@ padding: 1em;
     background-color: var(--branco);
     padding: 1em;
 }
+
+
+.lista-menu__titulo{
+    color: var(--laranja);
+    font-weight:700;
+}
+
+
+.lista-menu__link{
+    background: var(--azul-degrade);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
+
+.container__botao{
+    display: none;
+}
